<resources>
    <string name="app_name">DocHop</string>
    <string name="dialog_symptoms">Enter your symptoms</string>
    <string name="request">Request</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="location_not_found">Location not found</string>
    <string name="retry">Retry</string>
    <string name="dialog_gp_arrived">Your General Practitioner has arrived!</string>
    <string name="got_it">Got it!</string>
    <string name="your_account">Your Account</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="retype_password">Retype Password:</string>
    <string name="done">Done</string>
    <string name="practicing_certificate">Practicing Certificate:</string>
    <string name="upload">Upload</string>
    <string name="todo">TODO</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="arrived">Arrived</string>
    <string name="complete_request">Complete Request</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="gender">Gender:</string>
    <string name="lets_get_you_set_up">Lets get you set up!</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="age">Age:</string>
    <string name="email">Email:</string>
    <string name="contact_number">Contact No:</string>
    <string name="medical_certification">Medical Certification:</string>
    <string name="show_password">Show</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="choose_cert">Choose Cert</string>
    <string name="dochop_login">DocHop Login</string>
    <string name="enter_password_here">Enter password here…</string>
    <string name="login">Login</string>
    <string name="enter_username_here">Enter username here…</string>
    <string name="request_doctor">Request Doctor</string>
    <string name="searching_for_nearby_doctors">Searching for nearby doctors</string>
    <string name="a_general_practitioner_is_on_the_way_please_stay_at_your_current_location">A General Practitioner is on the way. Please stay at your current location.</string>
    <string name="request_is_currently_being_fulfilled_n_n_the_request_will_be_completed_once_your_general_practitioner_has_finished_with_the_checkup">Request is currently being fulfilled.     The request will be completed once your General Practitioner has finished with the checkup</string>
    <string name="let_s_get_you_set_up">Lets get you set up!</string>
    <string name="medical_history">Medical History:</string>
    <string name="height_cm">Height(cm):</string>
    <string name="weight_kg">Weight(kg):</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="welcome_to_dochop">Welcome to DocHop</string>
    <string name="please_turn_on_location_services_and_try_again">Please turn on location services and try again.</string>
    <string name="input_your_symptoms_here">Input your symptoms here</string>
</resources>
